--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,11 @@
                                 <i class="bi bi-speedometer2"></i> Admin Dashboard
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('admin_users') }}">
+                                <i class="bi bi-people"></i> Users
+                            </a>
+                        </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('dashboard') }}">
